testsuite/tests/properties/invalid_prop_args/foo.lkt
import lexer_example

grammar foo_grammar {
    @main_rule main_rule <- BarCode("example" rule_2)
    rule_2 <- BarNode("example" rule_2)
}
